--- a/html/about.html
+++ b/html/about.html
@@ -65,7 +65,7 @@
                 scooter, your traveling distance, and many more things all in an
                 easy to use app.
               </p>
-              <a class="btn">Learn More</a>
+              <a href="" class="btn">Learn More</a>
             </div>
             <div class="intro__img">
               <div class="img">
@@ -115,7 +115,7 @@
                 hometown. We’re aiming to let our scooters loose on 23 cities
                 over the coming year.
               </p>
-              <a class="btn">Learn More</a>
+              <a href="" class="btn">Learn More</a>
             </div>
           </div>
         </div>
