--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 scooter, your traveling distance, and many more things all in an
                 easy to use app.
               </p>
-              <a class="btn">Learn More</a>
+              <a href="" class="btn">Learn More</a>
             </div>
             <div class="intro__img">
               <div class="img">
@@ -222,7 +222,7 @@
                 hometown. We’re aiming to let our scooters loose on 23 cities
                 over the coming year.
               </p>
-              <a class="btn">Learn More</a>
+              <a href="" class="btn">Learn More</a>
             </div>
           </div>
           <div class="intro__wrapper">
@@ -234,7 +234,7 @@
                 inside the app. Need to pay later? No worries! You can defer
                 payment for up to a month.
               </p>
-              <a class="btn">Learn More</a>
+              <a href="" class="btn">Learn More</a>
             </div>
             <div class="intro__img threeth">
               <div class="img">
