--- a/html/career.html
+++ b/html/career.html
@@ -65,7 +65,7 @@
                 scooter, your traveling distance, and many more things all in an
                 easy to use app.
               </p>
-              <a class="btn">Learn More</a>
+              <a href="" class="btn">Learn More</a>
             </div>
             <div class="intro__img">
               <div class="img">
