--- a/html/career.html
+++ b/html/career.html
@@ -38,7 +38,7 @@
             <li><a href="./location.html">Location</a></li>
             <li><a href="">Careers</a></li>
           </ul>
-          <a href="" class="btn header-btn">Get Scootin</a>
+          <a href="#" class="btn header-btn">Get Scootin</a>
         </nav>
       </div>
     </header>
@@ -65,7 +65,7 @@
                 scooter, your traveling distance, and many more things all in an
                 easy to use app.
               </p>
-              <a href="" class="btn">Learn More</a>
+              <a href="#" class="btn">Learn More</a>
             </div>
             <div class="intro__img">
               <div class="img">
@@ -165,42 +165,42 @@
                 <h4>General Manager</h4>
                 <p>Jakarta, Indonesia</p>
               </div>
-              <a class="btn country__btn" href="">Apply</a>
+              <a class="btn country__btn" href="#">Apply</a>
             </li>
             <li>
               <div>
                 <h4>UI/UX Designer</h4>
                 <p>Yokohama, Japan</p>
               </div>
-              <a class="btn country__btn" href="">Apply</a>
+              <a class="btn country__btn" href="#">Apply</a>
             </li>
             <li>
               <div>
                 <h4>Blog Content Copywriter</h4>
                 <p>New York, United States</p>
               </div>
-              <a class="btn country__btn" href="">Apply</a>
+              <a class="btn country__btn" href="#">Apply</a>
             </li>
             <li>
               <div>
                 <h4>Graphic Designer</h4>
                 <p>New York, United States</p>
               </div>
-              <a class="btn country__btn" href="">Apply</a>
+              <a class="btn country__btn" href="#">Apply</a>
             </li>
             <li>
               <div>
                 <h4>Fleet Supervisor</h4>
                 <p>Jakarta, Indonesia</p>
               </div>
-              <a class="btn country__btn" href="">Apply</a>
+              <a class="btn country__btn" href="#">Apply</a>
             </li>
             <li>
               <div>
                 <h4>UX Analyst</h4>
                 <p>London, United Kingdom</p>
               </div>
-              <a class="btn country__btn" href="">Apply</a>
+              <a class="btn country__btn" href="#">Apply</a>
             </li>
           </ul>
         </div>
@@ -211,7 +211,7 @@
             <h2>Sign up and Scoot off today</h2>
           </div>
           <div class="sign-up__icon">
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="159"
@@ -237,7 +237,7 @@
                 </defs>
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="182"
@@ -299,7 +299,7 @@
             <li><a href="">Careers</a></li>
           </ul>
           <div class="navbar__icon">
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -312,7 +312,7 @@
                 />
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -325,7 +325,7 @@
                 />
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
