--- a/html/location.html
+++ b/html/location.html
@@ -37,7 +37,7 @@
             <li><a href="">Location</a></li>
             <li><a href="./career.html">Careers</a></li>
           </ul>
-          <a href="" class="btn header-btn">Get Scootin</a>
+          <a href="#" class="btn header-btn">Get Scootin</a>
         </nav>
       </div>
     </header>
@@ -56,10 +56,10 @@
         <div class="container">
           <div class="map__container"></div>
           <div class="map__wrapper">
-            <div class="london"><a href="">London</a></div>
-            <div class="new-york"><a href="">New York</a></div>
-            <div class="yokohoma"><a href="">Yokohama</a></div>
-            <div class="jakarta"><a href="">Jakarta</a></div>
+            <div class="london"><a href="#">London</a></div>
+            <div class="new-york"><a href="#">New York</a></div>
+            <div class="yokohoma"><a href="#">Yokohama</a></div>
+            <div class="jakarta"><a href="#">Jakarta</a></div>
           </div>
         </div>
       </section>
@@ -87,7 +87,7 @@
             <h2>Sign up and Scoot off today</h2>
           </div>
           <div class="sign-up__icon">
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="159"
@@ -113,7 +113,7 @@
                 </defs>
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="182"
@@ -174,7 +174,7 @@
             <li><a href="./career.html">Careers</a></li>
           </ul>
           <div class="navbar__icon">
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -187,7 +187,7 @@
                 />
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -200,7 +200,7 @@
                 />
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
