--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="./html/location.html">Location</a></li>
             <li><a href="./html/career.html">Careers</a></li>
           </ul>
-          <a href="" class="btn header-btn">Get Scootin</a>
+          <a href="#" class="btn header-btn">Get Scootin</a>
         </nav>
       </div>
     </header>
@@ -59,7 +59,7 @@
                   app to locate the nearest bike, unlock it with a tap, and
                   you’re away!
                 </p>
-                <a href="" class="btn">Get Scootin</a>
+                <a href="#" class="btn">Get Scootin</a>
               </div>
             </div>
             <div class="desig-ar">
@@ -175,7 +175,7 @@
                 scooter, your traveling distance, and many more things all in an
                 easy to use app.
               </p>
-              <a href="" class="btn">Learn More</a>
+              <a href="#" class="btn">Learn More</a>
             </div>
             <div class="intro__img">
               <div class="img">
@@ -222,7 +222,7 @@
                 hometown. We’re aiming to let our scooters loose on 23 cities
                 over the coming year.
               </p>
-              <a href="" class="btn">Learn More</a>
+              <a href="#" class="btn">Learn More</a>
             </div>
           </div>
           <div class="intro__wrapper">
@@ -234,7 +234,7 @@
                 inside the app. Need to pay later? No worries! You can defer
                 payment for up to a month.
               </p>
-              <a href="" class="btn">Learn More</a>
+              <a href="#" class="btn">Learn More</a>
             </div>
             <div class="intro__img threeth">
               <div class="img">
@@ -264,7 +264,7 @@
             <h2>Sign up and Scoot off today</h2>
           </div>
           <div class="sign-up__icon">
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="159"
@@ -290,7 +290,7 @@
                 </defs>
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="182"
@@ -352,7 +352,7 @@
             <li><a href="./html/career.html">Careers</a></li>
           </ul>
           <div class="navbar__icon">
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -365,7 +365,7 @@
                 />
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -378,7 +378,7 @@
                 />
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
