--- a/html/about.html
+++ b/html/about.html
@@ -38,7 +38,7 @@
             <li><a href="./location.html">Location</a></li>
             <li><a href="./career.html">Careers</a></li>
           </ul>
-          <a href="" class="btn header-btn">Get Scootin</a>
+          <a href="#" class="btn header-btn">Get Scootin</a>
         </nav>
       </div>
     </header>
@@ -65,7 +65,7 @@
                 scooter, your traveling distance, and many more things all in an
                 easy to use app.
               </p>
-              <a href="" class="btn">Learn More</a>
+              <a href="#" class="btn">Learn More</a>
             </div>
             <div class="intro__img">
               <div class="img">
@@ -115,7 +115,7 @@
                 hometown. We’re aiming to let our scooters loose on 23 cities
                 over the coming year.
               </p>
-              <a href="" class="btn">Learn More</a>
+              <a href="#" class="btn">Learn More</a>
             </div>
           </div>
         </div>
@@ -378,7 +378,7 @@
             <h2>Sign up and Scoot off today</h2>
           </div>
           <div class="sign-up__icon">
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="159"
@@ -404,7 +404,7 @@
                 </defs>
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="182"
@@ -466,7 +466,7 @@
             <li><a href="./career.html">Careers</a></li>
           </ul>
           <div class="navbar__icon">
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -479,7 +479,7 @@
                 />
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -492,7 +492,7 @@
                 />
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
