--- a/html/career.html
+++ b/html/career.html
@@ -44,7 +44,7 @@
     </header>
     <!-- Main -->
     <main>
-      <section class="hero-top">
+      <section class="hero-top carer-container">
         <div class="container">
           <h1>Careers</h1>
         </div>
