--- a/html/location.html
+++ b/html/location.html
@@ -42,7 +42,7 @@
       </div>
     </header>
     <main>
-      <section class="hero-top">
+      <section class="hero-top carer-container">
         <div class="container">
           <h1>Locations</h1>
         </div>
@@ -78,7 +78,7 @@
               </p>
             </div>
           </div>
-          <a class="btn" href="">Message Us</a>
+          <a class="btn" href="#">Message Us</a>
         </div>
       </section>
       <section class="sign-up">
