--- a/html/location.html
+++ b/html/location.html
@@ -54,7 +54,10 @@
       </section>
       <section class="map">
         <div class="container">
-          <div class="map__container"></div>
+          <div class="map__container">
+            <img class="desk" src="../images/svg/map-bg.svg" alt="" />
+            <img class="phon" src="../images/svg/map-ph.svg" alt="" />
+          </div>
           <div class="map__wrapper">
             <div class="london"><a href="#">London</a></div>
             <div class="new-york"><a href="#">New York</a></div>
