--- a/html/location.html
+++ b/html/location.html
@@ -55,8 +55,20 @@
       <section class="map">
         <div class="container">
           <div class="map__container">
-            <img class="desk" src="../images/svg/map-bg.svg" alt="" />
-            <img class="phon" src="../images/svg/map-ph.svg" alt="" />
+            <img
+              height="543"
+              width="1110"
+              class="desk"
+              src="../images/svg/map-bg.svg"
+              alt=""
+            />
+            <img
+              width="311"
+              height="152"
+              class="phon"
+              src="../images/svg/map-ph.svg"
+              alt=""
+            />
           </div>
           <div class="map__wrapper">
             <div class="london"><a href="#">London</a></div>
